feat(core): harden db restoration & add system alerts (Fixes #2, #3, #4)
Major improvements to system stability, data persistence, and error visibility.

Backend Changes:
- DatabaseConfig: Disabled `spring.sql.init.mode` to prevent `data.sql` from wiping DB on restart.
- DatabaseRestorer: Added validation to reject restore files <10KB to prevent corruption/wiping.
- DatabaseRestorer: Now generates a failure flag file (`restore_failed.flag`) if restoration is skipped or fails.
- SystemStatusController: New endpoint `/api/system/alerts` to expose critical system states to the UI.
- BackupService: Refactored to use [BackupPathStrategy], decoupling path logic for safer testing.
- Tests: Fixed integration tests that were leaking `.restore` files into production data folders.

Frontend Changes:
- Dashboard: Added integration with `/api/system/alerts` to poll and display critical errors.
- Dashboard: Implemented new persistent UI for System Alerts (Red/Error cards).
- Styles: Added comprehensive `.alert-card` styling for Info, Warning, and Error notifications.

Fixes critical data loss issues where restarts would reset the database, and prevents accidental restoration of invalid backup files.